# remote_io_zephyr

./: .cproject  .project  CMakeLists.txt  Kconfig  README.md  artifact.mender  build_artifact.sh  log  prj.conf  remote_io_zephyr.code-workspace  restart_router  west.yml  zephyr (1).launch
boards/: nucleo_f767zi.conf  nucleo_f767zi_firmware.overlay  nucleo_f767zi_ws2812_pwm.overlay  nucleo_f767zi_ws2812_spi.overlay
dts/bindings/: gpio-outputs.yaml
src/: _ethernet_if.c  _main.c  api.c  digital_input.c  digital_output.c  ethernet_if.c  flash.c  freertos.c  main.c  settings.c  stm32f7xx_hal_msp.c  stm32f7xx_it.c  syscalls.c  system_info.c  uart.c  utils.c  ws28xx_gpio.c  ws28xx_led.c  ws28xx_pwm.c
src/inc/: Garmin_Root_CA_2018.crt  api.h  ca-cert.crt  cpu_map.h  digital_input.h  digital_output.h  error_code.h  ethernet_if.h  flash.h  freertos.h  localhost.crt  main.h  settings.h  stm32f7xx_it.h  stm32f7xx_remote_io.h  system_info.h  uart.h  utils.h  ws28xx_gpio.h  ws28xx_led.h  ws28xx_pwm.h
src/mender/: Kconfig  mender_ota.c  mender_ota.h  storage.c  storage.h
